# iot-middleware-freertos-samples

demos/projects/ESPRESSIF/esp32/main/: CMakeLists.txt  azure_iot_freertos_esp32_main.c  wifi_ap_captive_portal.c  wifi_ap_captive_portal.h
demos/sample_azure_iot_pnp/: sample_azure_iot_pnp_simulated_data.c
